[package]
name = "rustpp"
version = "0.1.3"
edition = "2021"
description = "A crate aimed to reduce complexity while coding"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0",features=["derive"]}
serde_json = {version="1.0"}
